--- a/NuKeeper.Tests/NuKeeper.Tests.csproj
+++ b/NuKeeper.Tests/NuKeeper.Tests.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0"></PackageReference>
 	<PackageReference Include="NUnit" Version="3.7.1"></PackageReference>
     <PackageReference Include="NUnit3TestAdapter" Version="3.8.0" />
+    <PackageReference Include="Octokit" Version="0.24.1-alpha0001" />
   </ItemGroup>
 
   <ItemGroup>
