--- a/NuKeeper/NuKeeper.csproj
+++ b/NuKeeper/NuKeeper.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="EasyConfig.Net.Core" Version="1.0.47" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="NuGet.Protocol.Core.v3" Version="4.2.0" />
+    <PackageReference Include="Octokit" Version="0.24.1-alpha0001" />
   </ItemGroup>
 </Project>
